@startuml

title __LABA4's Class Diagram__\n

  package  {
    abstract class AccountingSystem {
    }
  }
  

  package  {
    class Book {
    }
  }
  

  package  {
    class BookRequest {
    }
  }
  

  package  {
    class Librarian {
    }
  }
  

  package  {
    class LibrarianAccountingSystem {
    }
  }
  

  package  {
    class LibraryDB {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class Reader {
    }
  }
  

  package  {
    class UserAccountingSystem {
    }
  }
  

  Librarian o-- LibrarianAccountingSystem : accountingSystem
  LibrarianAccountingSystem -up-|> AccountingSystem
  Reader o-- UserAccountingSystem : accountingSystem
  Reader o-- Librarian : librarian
  UserAccountingSystem -up-|> AccountingSystem


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
